--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-    <title>Travel Website</title>
+    <title>Tourism Website Layout </title>
     <link rel="icon" href="images/logo.jpg" type="image/jpg">
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
@@ -15,8 +15,8 @@
         <img src="images/logo.jpg">
         <button type="button" class="login-btn">Login</button>
     </div>
-    <h1>Travel Across the Globe</h1>
-    <p>Chance To Grab This Golden Opportunity with Progate</p>
+    <h1>Travel Across the World </h1>
+    <p>Chance To Grab This Golden Opportunity with Mahesh Babar</p>
     <div class="input-group">
         <input type="text" class="form-control" placeholder="Search Country or City">
         <div class="input-group-append">
@@ -286,7 +286,7 @@
                 </div>
             </div>
             <hr>
-            <p class="copyright">Made with <i class="fa fa-heart"></i>by Progate and Mahesh Babar </p>
+            <p class="copyright">Made with <i class="fa fa-heart"></i>by Mahesh Babar  </p>
         </div>
     </div>
 </section>
