--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
 <section class="header">
     <div class="container">
-        <img src="images/logo.jpg">
+        <img src="images/logo.jpg" style="border-radius: 50%;">
         <button type="button" class="login-btn">Login</button>
     </div>
     <h1>Travel Across the World </h1>
@@ -261,7 +261,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-3">
-                    <img src="images/logo.jpg" class="footer-logo">
+                    <img src="images/logo.jpg" class="footer-logo" style="border-radius: 50%;">
                     <p>Planning a trip all by yourself is not an easy job. Maybe for once, a solo trip can be taken care of, but planning a vacation for the whole family or a group of friends can be a task you’ll probably find difficult to do all by yourself. So What are you waiting for?</p>
                 </div>
                 <div class="col-md-3">
