--- a/index.html
+++ b/index.html
@@ -272,10 +272,10 @@
                 </div>
                 <div class="col-md-3">
                     <h4>Quick Contact</h4>
-                    <p><i class="fa fa-phone-square"></i><a target="_blank" href="tel:932658415">+91 9326585415</a></p>
+                    <p><i class="fa fa-phone-square"></i><a target="_blank" href="tel:9326585415">+91 9326585415</a></p>
                     <p><i class="fa fa-whatsapp"></i><a target="_blank" href="https://wa.link/ak32v9">Whatsapp</a></p>
                     <p><i class="fa fa-envelope"></i><a target="_blank" href = "mailto:maheshdbabar9340@gmail.com">maheshdbabar9340@gmail.com</a></p>
-                    <p><i class="fa fa-home"></i> Borivali, Mumbai, Maharashtra</p>
+                    <p><i class="fa fa-home"></i>Mumbai, Maharashtra</p>
                 </div>
                 <div class="col-md-3">
                     <h4>Follow Us On</h4>
